# miky

./: .gitignore  CHANGES.md  QUICKSTART.md  README.md  SUPABASE_FIX.sql  app.py  convert_to_csv.py  import_to_db.py  install.sh  push_to_github.bat  pyproject.toml  requirements.txt  streamlit_app.py  supabase_schema.sql  supabase_schema_email.sql
.streamlit/: config.toml
pages/: 1_Dashboard.py  2_Intelligence.py  2_Intelligence.py.deprecated  3_AI_Search.py  3_Database_Explorer.py  4_Email_Center.py  5_File_Manager.py  6_Settings.py
services/: __init__.py  ai_client.py  data_loader.py  database.py  deepseek_client.py  search_agent.py
tests/: conftest.py  test_ai_client.py  test_app_smoke.py  test_data_loader.py
